--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body, html{
 .container-flex:last-of-type{
     align-items: flex-end;
 }
+h1{
+    text-align: center;
+}
 h2{
     text-align: center; 
     padding:5px;
@@ -38,4 +41,10 @@ header p {
 }
 article{
     padding: 15px;
+}
+h3{
+    text-align: center;
+}
+#inputs{
+    text-align: center;
 }
