--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 body, html{
+    font-family: 'Prompt', sans-serif;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -29,6 +30,7 @@ h2{
     margin-right: 5px;
     border: 1px solid black;
     width: 300px;
+    margin-bottom: 20px;
 }
 footer{
     clear:both;
@@ -47,4 +49,7 @@ h3{
 }
 .inputs{
     text-align: center;
+}
+input, option, select, button{
+    font-family: 'Prompt', sans-serif;
 }
