--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body, html{
     padding: 0;
     width: 100%;
     height: 100%;
+    background: rgb(174,184,238);
+    background: radial-gradient(circle, rgba(174,184,238,1) 0%, rgba(148,210,233,1) 100%); 
+    color:white;
 }
 .container-flex{
     display:flex;
@@ -19,10 +22,25 @@ h1{
     text-align: center;
 }
 h2{
+    background: rgb(131,58,180);
     text-align: center; 
     padding:5px;
     margin: 0;
     border-bottom: 1px solid black;
+    color:white;
+}
+h1{
+    padding: 50px;
+    width: 50%;
+    margin:auto;
+    color:black;
+    text-decoration: underline;
+}
+form>h2{
+    width: 50%;
+    background-color:none;
+    margin: auto;
+    border-radius: 5px;
 }
 .container-flex>div{
     margin-left: 5px;
@@ -31,6 +49,8 @@ h2{
     border: 1px solid black;
     width: 300px;
     margin-bottom: 20px;
+    color:black;
+    background-color: #fff;
 }
 footer{
     clear:both;
